[project]
name = "committer_coverage_stats"
authors = [
  { name="Example Author", email="author@example.com" },
]
dynamic = ["version"]
dependencies = [
    "requests>=2.32.3",
    "PyYAML>=6.0.1"
]
keywords = ["qase", "openapi", "testsuite"]
description = "Generate Qase test suites from OpenAPI specs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/petrabarus/committer_coverage_stats"
Issues = "https://github.com/petrabarus/committer_coverage_stats/issues"

[project.scripts]
committer_coverage_stats = "committer_coverage_stats.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.packages.find]
where = ["src"]
